# so2-tp3_2020

./: CMakeLists.txt  Dockerfile  MultistageDockerfile  docker-compose.yml  nginx.conf
nginx/: nginx.conf
src/: main.c
src/stats/: Dockerfile  host_stats.c  host_stats.h  stats_service.c
src/users/: Dockerfile  user_manager.c  user_manager.h  user_service.c
